Mensaje de prueba con Wiedermann

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <li><a href="#me"> Pili </a></li>
                     <li><a href="#comidas fav">  Comidas fav </a></li>
                     <li><a href="musica"> musica </a></li>
+                    <li><a href="#hincha de"> soy hincha de </a></li>
+                    <li><a href="#flores fav"> mis flores fav </a></li>
+                    <li><a href="#metas"> metas </a></li>
                     <li><a href="#contacto"> contacto </a></li>
                 </ul>
             </nav>
@@ -138,6 +141,7 @@
                        <li>No te va a gustar</li>
                        <li>Alan Sutton y las criaturitas de la ansiedad</li>
                        <li>Michel Jackson</li>
+                       <li>Plan B</li>
                     </ul>
 
                     <h3>Algunas canciones que escucho en repeat: </h3>
@@ -145,9 +149,41 @@
                         <li>Frances Limon</li>
                         <li>As we are</li>
                         <li>Goosebumps</li>
+                        <li>flow 2000 rmx</li>
+                        <li>because i liked a boy</li>
                     </ul>
                
 
+            </ol>
+        </section>
+
+        <section id="hincha de" class="hincha de">
+            <h2>Soy hincha de...</h2>
+            <p>Obviamente del mejor equipo, boca</p>
+            <img src="imagenes/enano_boca.jpg" alt="representacion de boca" width="200" height="200" />
+        </section>
+
+        <section id="flores fav" class="flores fav">
+            <h2>Algunas de mis flores favoritas son: </h2>
+            <ul>
+                <li>rosas</li>
+                <img src="imagenes/rosas.avif" alt="rosass" width="200" height="200" />
+                <li>tulipanes</li>
+                <img src="imagenes/tulipanes.jpg" alt="tulipaness" width="200" height="200" />
+                <li>lirios</li>
+                <img src="imagenes/lirio.avif" alt="lirioss" width="200" height="200" />
+                <li>hortensias</li>
+                <img src="imagenes/Hortensias.jpg" alt="hortensiass" width="200" height="200" />
+            </ul>
+        </section>
+
+        <section id="metas" class="metas">
+            <h2>Metas que tengo para un futuro: </h2>
+            <ol>
+                <li>tener un buen trabajo, con buen sueldo</li>
+                <li>viajar y conocer todo el mundo</li>
+                <li>tener una vaca</li>
+                <img src="imagenes/vaca.jpg" alt="vaca" width="200" height="200" />
             </ol>
         </section>
 
@@ -155,7 +191,7 @@
         <section id="contacto" class="contacto">
             <h2>Contacto</h2>
             <ul>
-                <li><a href="https://instragram.com/aixfuentess_?igsh=MTI3dTcxZHpuYzZiZA==" target="_blank">click aqui></a></li>
+                <li><a href="https://www.instagram.com/aixfuentess_?igsh=MTl3dTcxZHpuYzZiZA==" target="_blank">click aqui></a></li>
             </ul>
         </section>
 
