agregue foto vaca

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <li>tener un buen trabajo, con buen sueldo</li>
                 <li>viajar y conocer todo el mundo</li>
                 <li>tener una vaca</li>
+                <img src="imagenes/vaca.jpg" alt="vaca" width="200" height="200" />
             </ol>
         </section>
 
