--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
                 <img src="imagenes/lirio.avif" alt="lirioss" width="200" height="200" />
                 <li>hortensias</li>
                 <img src="imagenes/Hortensias.jpg" alt="hortensiass" width="200" height="200" />
+                <li>claveles</li>
+                <img src="imagenes/claveles.jpg" alt="claveless" width="200" height="200" />
             </ul>
         </section>
 
