borre li de section pelis fav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="musica"> musica </a></li>
                     <li><a href="#hincha de"> soy hincha de </a></li>
                     <li><a href="#flores fav"> mis flores fav </a></li>
+                    <li><a href="peliculas fav">Mis pelis fav</a></li>
                     <li><a href="#metas"> metas </a></li>
                     <li><a href="#contacto"> contacto </a></li>
                 </ul>
@@ -85,8 +86,8 @@
                     <h3>panaderia: </h3>
                     <ul>
                         <li>alfajores</li>
-                        <li>bizcochitos</li>
                         <li>medialunas</li>
+                        <li>bizcochitos</li>
                         <li>pastelitos</li>
                         <li>tortas fritas</li>
                         <li>pan</li>
@@ -136,6 +137,7 @@
                        <li>Tyler the Creator</li>
                        <li>Los enanitos verdes</li>
                        <li>Indios</li>
+                       <li>Bardero$</li>
                        <li>Airbag</li>
                        <li>Soda Stereo</li>
                        <li>No te va a gustar</li>
@@ -151,6 +153,10 @@
                         <li>Goosebumps</li>
                         <li>flow 2000 rmx</li>
                         <li>because i liked a boy</li>
+                        <li>Moonlight</li>
+                        <li>Vida amarga</li>
+                        <li>Leave Me Lonely</li>
+                        <li>Cuanto vale hacer el amor</li>
                     </ul>
                
 
@@ -176,7 +182,22 @@
                 <img src="imagenes/Hortensias.jpg" alt="hortensiass" width="200" height="200" />
                 <li>claveles</li>
                 <img src="imagenes/claveles.jpg" alt="claveless" width="200" height="200" />
+                <li>convallaria</li>
+                <img src="imagenes/convallaria.webp" alt="convallaria" width="200" height="200" />
             </ul>
+        </section>
+
+        <section id="peliculas fav" class="peliculas fav">
+            <h2>Algunas de mis peliculas fav son: </h2>
+            <ul>
+                <li>Cartas a Julieta</li>
+                <li>Mamma Mia!</li>
+                <li>Una chica del siglo XX</li>
+                <li>Corazones Malheridos</li>
+                <li>El Conjuro</li>
+                <li>El libro de la vida</li>
+            </ul>
+   
         </section>
 
         <section id="metas" class="metas">
@@ -184,6 +205,7 @@
             <ol>
                 <li>tener un buen trabajo, con buen sueldo</li>
                 <li>viajar y conocer todo el mundo</li>
+                <li>encontrar al amor de mi vida</li>
                 <li>tener una vaca</li>
                 <img src="imagenes/vaca.jpg" alt="vaca" width="200" height="200" />
             </ol>
