cree nuevo li en section flores fav

--- a/index.html
+++ b/index.html
@@ -184,11 +184,12 @@
                 <img src="imagenes/claveles.jpg" alt="claveless" width="200" height="200" />
                 <li>convallaria</li>
                 <img src="imagenes/convallaria.webp" alt="convallaria" width="200" height="200" />
+                <li>lavandas</li>
             </ul>
         </section>
 
         <section id="peliculas fav" class="peliculas fav">
-            <h2>Algunas de mis peliculas fav son: </h2>
+            
             <ul>
                 <li>Cartas a Julieta</li>
                 <li>Mamma Mia!</li>
