agregue h2 a section pelis fav

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
 
         <section id="peliculas fav" class="peliculas fav">
-            
+            <h2>Algunas de mis peliculas fav son: </h2>
             <ul>
                 <li>Cartas a Julieta</li>
                 <li>Mamma Mia!</li>
