agregue etiqueta img a section flores fav

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 <li>convallaria</li>
                 <img src="imagenes/convallaria.webp" alt="convallaria" width="200" height="200" />
                 <li>lavandas</li>
+                <img src="imagenes/lavanda.webp" alt="lavandass" width="200" height="200" />
             </ul>
         </section>
 
