agregue nuevo li a section pelis fav

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                 <li>Corazones Malheridos</li>
                 <li>El Conjuro</li>
                 <li>El libro de la vida</li>
+                <li>Extraordinario</li>
             </ul>
    
         </section>
