agregue otro li a section pelis fav

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                 <li>El Conjuro</li>
                 <li>El libro de la vida</li>
                 <li>Extraordinario</li>
+                <li>La monja</li>
             </ul>
    
         </section>
