agregue etiqueta p a section me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <p>Por otro lado, de parte paterna tengo 3 tios, mi tio Kili tiene 6, mi tia Lily tiene 2 hijos y mi tia Paula tiene 3.</p>
             <p>Me encanta viajar y siempre que me invitan a algun viaje voy, este año eh viajado a: las grutas, monte hermoso, san martin, cordoba capital y carlos paz.</p>
             <p>De chiquita aprendi a tocar varios instrumentos como: la flauta, la guitarra, el piano, entre otros, aunque ultimamente perdi prectica.</p>
-            <p>Me hubiese encantado de chica hacer mas actividades extracurriculares como baile o voley (espero en algun momento poder)</p>
+            <p>Me hubiese encantado de chica hacer mas actividades extracurriculares como baile o voley (espero en algun momento poder).</p>
+            <p>Espero en algun momento poder probar nuevas actividades que siempre quise hacer, dedicarles el tiempo que se merecen a las actividades fuera del horario escolar</p>
             <p>Más adelante me gustaria estudiar algo relacionado a la medicina o a la ingenieria</p>
         </section>
 
