agregue etiqueta p a pie de pagina

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         </section>
 
         <footer> 
+            <p>eso es todo, muchas gracias por ver!!</p>
             <p>&copy; 2025 Echo por Pilar. Todos los derechos reservados.</p>
         </footer>
     </body>
